fixed bubble issue on mobile

--- a/less/homepage.less
+++ b/less/homepage.less
@@ -63,27 +63,6 @@
                 margin-left: 12.5%
             }
 
-            @media (max-width: @screen-xs-max) {
-                .col-md-offset-half {
-                    margin-left: 12.5%
-                }
-            }
-            @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-                .col-md-offset-half {
-                    margin-left: 12.5%
-                }
-            }
-            @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-                .col-md-offset-half {
-                    margin-left: 12.5%
-                }
-            }
-            @media (min-width: @screen-lg-min) {
-                .col-md-offset-half {
-                    margin-left: 12.5%
-                }
-            }
-
             .title {
                 color: @gray-alternative-2;
                 font-family: "proxima-nova", arial, sans-serif;
@@ -105,6 +84,11 @@
     #idea {
         .subtitle {
             margin-top: 20px;
+        }
+        .content {
+            img {
+                margin: auto;
+            }
         }
     }
 
